// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Directions display component  expected to match snapshot 1`] = `
<Directions
  directions={
    Array [
      "directions 1",
      "direction 2",
      "direction 3",
    ]
  }
>
  <div
    className="col-12 directions-list-wrapper"
  >
    <h5
      className="display-4"
    >
      Directions 
    </h5>
    <Direction
      content="directions 1"
      index={0}
      key="directions 11516520886133"
    >
      <Accordion
        className="d-flex align-items-start flex-column col-12 no-box-shadow"
        id="Step 0"
        index={0}
      >
        <ListItem
          className="d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          content=""
          handleClick={[Function]}
          index={0}
        >
          <div
            className="lead list-item d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          >
            <AccordionHeader
              className=" d-flex no-margin w-100"
              id="Step 0"
              index={0}
              title="Step 1"
            >
              <div
                className=" d-flex no-margin w-100"
                id="accordion0"
                role="tab"
              >
                <h4
                  className="mb-0 flex-auto ellipsis"
                  style={
                    Object {
                      "margin": ".1em",
                    }
                  }
                >
                  <a
                    aria-controls="Step 0"
                    aria-expanded="false"
                    className="collapsed collapse-trigger lead a"
                    data-toggle="collapse"
                    href="#item0"
                  >
                    Step 1
                  </a>
                </h4>
                <a
                  aria-expanded="false"
                  className="collapsed collapse-trigger a btn btn-secondary-outline"
                  data-toggle="collapse"
                  href="#item0"
                  id="toggle"
                  onClick={[Function]}
                  type=""
                >
                  Show
                </a>
              </div>
            </AccordionHeader>
            <AccordionBody
              className=""
              id="Step 0"
              index={0}
            >
              <div
                className="collapse w-100"
                data-parent="#Step 0"
                id="item0"
                role="tabpanel"
              >
                <div
                  className="card-body accordion-text"
                >
                  <p
                    className="no-margin"
                  >
                    directions 1
                  </p>
                </div>
              </div>
            </AccordionBody>
          </div>
        </ListItem>
      </Accordion>
    </Direction>
    <Direction
      content="direction 2"
      index={1}
      key="direction 21516520886133"
    >
      <Accordion
        className="d-flex align-items-start flex-column col-12 no-box-shadow"
        id="Step 1"
        index={1}
      >
        <ListItem
          className="d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          content=""
          handleClick={[Function]}
          index={0}
        >
          <div
            className="lead list-item d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          >
            <AccordionHeader
              className=" d-flex no-margin w-100"
              id="Step 1"
              index={1}
              title="Step 2"
            >
              <div
                className=" d-flex no-margin w-100"
                id="accordion1"
                role="tab"
              >
                <h4
                  className="mb-0 flex-auto ellipsis"
                  style={
                    Object {
                      "margin": ".1em",
                    }
                  }
                >
                  <a
                    aria-controls="Step 1"
                    aria-expanded="false"
                    className="collapsed collapse-trigger lead a"
                    data-toggle="collapse"
                    href="#item1"
                  >
                    Step 2
                  </a>
                </h4>
                <a
                  aria-expanded="false"
                  className="collapsed collapse-trigger a btn btn-secondary-outline"
                  data-toggle="collapse"
                  href="#item1"
                  id="toggle"
                  onClick={[Function]}
                  type=""
                >
                  Show
                </a>
              </div>
            </AccordionHeader>
            <AccordionBody
              className=""
              id="Step 1"
              index={1}
            >
              <div
                className="collapse w-100"
                data-parent="#Step 1"
                id="item1"
                role="tabpanel"
              >
                <div
                  className="card-body accordion-text"
                >
                  <p
                    className="no-margin"
                  >
                    direction 2
                  </p>
                </div>
              </div>
            </AccordionBody>
          </div>
        </ListItem>
      </Accordion>
    </Direction>
    <Direction
      content="direction 3"
      index={2}
      key="direction 31516520886133"
    >
      <Accordion
        className="d-flex align-items-start flex-column col-12 no-box-shadow"
        id="Step 2"
        index={2}
      >
        <ListItem
          className="d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          content=""
          handleClick={[Function]}
          index={0}
        >
          <div
            className="lead list-item d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          >
            <AccordionHeader
              className=" d-flex no-margin w-100"
              id="Step 2"
              index={2}
              title="Step 3"
            >
              <div
                className=" d-flex no-margin w-100"
                id="accordion2"
                role="tab"
              >
                <h4
                  className="mb-0 flex-auto ellipsis"
                  style={
                    Object {
                      "margin": ".1em",
                    }
                  }
                >
                  <a
                    aria-controls="Step 2"
                    aria-expanded="false"
                    className="collapsed collapse-trigger lead a"
                    data-toggle="collapse"
                    href="#item2"
                  >
                    Step 3
                  </a>
                </h4>
                <a
                  aria-expanded="false"
                  className="collapsed collapse-trigger a btn btn-secondary-outline"
                  data-toggle="collapse"
                  href="#item2"
                  id="toggle"
                  onClick={[Function]}
                  type=""
                >
                  Show
                </a>
              </div>
            </AccordionHeader>
            <AccordionBody
              className=""
              id="Step 2"
              index={2}
            >
              <div
                className="collapse w-100"
                data-parent="#Step 2"
                id="item2"
                role="tabpanel"
              >
                <div
                  className="card-body accordion-text"
                >
                  <p
                    className="no-margin"
                  >
                    direction 3
                  </p>
                </div>
              </div>
            </AccordionBody>
          </div>
        </ListItem>
      </Accordion>
    </Direction>
  </div>
</Directions>
`;

exports[`Directions display component  expected to match snapshot 2`] = `
<Directions
  directions={
    Array [
      "directions 1",
    ]
  }
>
  <div
    className="col-12 directions-list-wrapper"
  >
    <h5
      className="display-4"
    >
      Directions 
    </h5>
    <Direction
      content="directions 1"
      index={0}
      key="directions 11516520886150"
    >
      <Accordion
        className="d-flex align-items-start flex-column col-12 no-box-shadow"
        id="Step 0"
        index={0}
      >
        <ListItem
          className="d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          content=""
          handleClick={[Function]}
          index={0}
        >
          <div
            className="lead list-item d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          >
            <AccordionHeader
              className=" d-flex no-margin w-100"
              id="Step 0"
              index={0}
              title="Step 1"
            >
              <div
                className=" d-flex no-margin w-100"
                id="accordion0"
                role="tab"
              >
                <h4
                  className="mb-0 flex-auto ellipsis"
                  style={
                    Object {
                      "margin": ".1em",
                    }
                  }
                >
                  <a
                    aria-controls="Step 0"
                    aria-expanded="false"
                    className="collapsed collapse-trigger lead a"
                    data-toggle="collapse"
                    href="#item0"
                  >
                    Step 1
                  </a>
                </h4>
                <a
                  aria-expanded="false"
                  className="collapsed collapse-trigger a btn btn-secondary-outline"
                  data-toggle="collapse"
                  href="#item0"
                  id="toggle"
                  onClick={[Function]}
                  type=""
                >
                  Show
                </a>
              </div>
            </AccordionHeader>
            <AccordionBody
              className=""
              id="Step 0"
              index={0}
            >
              <div
                className="collapse w-100"
                data-parent="#Step 0"
                id="item0"
                role="tabpanel"
              >
                <div
                  className="card-body accordion-text"
                >
                  <p
                    className="no-margin"
                  >
                    directions 1
                  </p>
                </div>
              </div>
            </AccordionBody>
          </div>
        </ListItem>
      </Accordion>
    </Direction>
  </div>
</Directions>
`;

exports[`Directions display component  expected to match snapshot 3`] = `
<Directions
  directions={
    Array [
      "directions 1",
    ]
  }
>
  <div
    className="col-12 directions-list-wrapper"
  >
    <h5
      className="display-4"
    >
      Directions 
    </h5>
    <Direction
      content="directions 1"
      index={0}
      key="directions 11516520886150"
    >
      <Accordion
        className="d-flex align-items-start flex-column col-12 no-box-shadow"
        id="Step 0"
        index={0}
      >
        <ListItem
          className="d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          content=""
          handleClick={[Function]}
          index={0}
        >
          <div
            className="lead list-item d-flex align-items-start flex-column col-12 no-box-shadow accordion"
          >
            <AccordionHeader
              className=" d-flex no-margin w-100"
              id="Step 0"
              index={0}
              title="Step 1"
            >
              <div
                className=" d-flex no-margin w-100"
                id="accordion0"
                role="tab"
              >
                <h4
                  className="mb-0 flex-auto ellipsis"
                  style={
                    Object {
                      "margin": ".1em",
                    }
                  }
                >
                  <a
                    aria-controls="Step 0"
                    aria-expanded="false"
                    className="collapsed collapse-trigger lead a"
                    data-toggle="collapse"
                    href="#item0"
                  >
                    Step 1
                  </a>
                </h4>
                <a
                  aria-expanded="false"
                  className="collapsed collapse-trigger a btn btn-secondary-outline"
                  data-toggle="collapse"
                  href="#item0"
                  id="toggle"
                  onClick={[Function]}
                  type=""
                >
                  Show
                </a>
              </div>
            </AccordionHeader>
            <AccordionBody
              className=""
              id="Step 0"
              index={0}
            >
              <div
                className="collapse w-100"
                data-parent="#Step 0"
                id="item0"
                role="tabpanel"
              >
                <div
                  className="card-body accordion-text"
                >
                  <p
                    className="no-margin"
                  >
                    directions 1
                  </p>
                </div>
              </div>
            </AccordionBody>
          </div>
        </ListItem>
      </Accordion>
    </Direction>
  </div>
</Directions>
`;
